# js-instrumentation-wasm

./: .gitignore  CONTRIBUTING.md  LICENSE-3rdparty.csv  README.md  eslint.config.mjs  package.json  rollup.config.js  static-analysis.datadog.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/check-release-status/: action.yml
.github/actions/publish/: action.yml
.github/actions/test/: action.yml
.github/workflows/: ci_main.yml  publish_package.yml  trigger_release.yml
privacy-helpers/: index.ts  package.json  tsconfig.json
rust/: Cargo.toml
rust/datadog-js-instrumentation/: Cargo.toml
rust/datadog-js-instrumentation/src/: lib.rs
rust/js-instrumentation-rewrite/: Cargo.toml
rust/js-instrumentation-rewrite/src/: lib.rs  rewrite.rs  rewrite_content.rs  rewrite_error.rs  rewrite_kind.rs  rewrite_output.rs  rewrite_plan.rs
rust/js-instrumentation-shared/: Cargo.toml
rust/js-instrumentation-shared/src/: filetype.rs  input_file.rs  instrumentation_input.rs  instrumentation_options.rs  instrumentation_output.rs  lib.rs  log.rs  module_kind.rs  parser.rs  syntax.rs  transform_options.rs  transform_output.rs
rust/js-instrumentation-transform/: Cargo.toml
rust/js-instrumentation-transform/src/: instrumentation_transform.rs  lib.rs
rust/js-instrumentation-transform/src/comments/: directive_set.rs  mod.rs  process_comments.rs  source_map_comment.rs
rust/js-instrumentation-transform/src/dictionary/: dictionary_error.rs  dictionary_optimizer.rs  dictionary_tracker.rs  mod.rs
rust/js-instrumentation-transform/src/directives/: directive_set.rs  mod.rs
rust/js-instrumentation-transform/src/emit/: emit.rs  emit_banner.rs  emit_context.rs  emit_error.rs  emit_rewritten_input.rs  mod.rs  output_emitter.rs
rust/js-instrumentation-transform/src/features/: feature_tracker.rs  mod.rs
rust/js-instrumentation-transform/src/identifiers/: character_tracker.rs  character_usage_data.rs  identifier_tracker.rs  mod.rs
rust/js-instrumentation-transform/src/input/: mod.rs  parser.rs
rust/js-instrumentation-transform/src/rewrite/: mod.rs  privacy_rewrite_content.rs  privacy_rewrite_declarations.rs  privacy_rewrite_template.rs  rewrite_tracker.rs  rewrites.rs
rust/js-instrumentation-transform/src/source_maps/: mod.rs
rust/js-instrumentation-transform/src/visitor/: ast_visitor.rs  mod.rs
rust/js-instrumentation-transform/tests/: fixture.rs
scripts/: build-js.sh  build-rust.sh  build-tests.sh  build.sh  clean-js.sh  clean-rust.sh  clean-tests.sh  clean.sh  run-integration-tests.sh  run-unit-tests-js.sh  run-unit-tests-rust.sh  run-unit-tests.sh  update-snapshots.sh
src/: index.ts
tests/app/: index.html  tsconfig.app.json
tests/app/src/: App.tsx
tests/fixtures/common-cases/: input.js  output.js
tests/fixtures/commonjs-exports/: input.js  output.js
tests/fixtures/commonjs-module-exports/: input.js  output.js
tests/fixtures/commonjs-require/: input.js  output.js
tests/fixtures/conflict/: input.js  output.js
tests/fixtures/excluded-file/: input.js
tests/fixtures/excluded-lines/: input.js  output.js
tests/fixtures/excluded-strings/: output.js
tests/fixtures/inline-sourcemap/: input.js  output.js
tests/fixtures/jsx/: input.jsx  output.jsx
tests/fixtures/jsx-html-entities/: input.jsx  output.jsx
tests/fixtures/reference-size/: input.js  output.js
tests/fixtures/regular-expressions/: input.js  output.js
tests/fixtures/shebang/: input.js  output.js
tests/fixtures/string-literals/: input.js  output.js
tests/fixtures/switch-statements/: input.js  output.js
tests/fixtures/tagged-templates-only/: input.js  output.js
tests/fixtures/templates/: input.js  output.js
tests/fixtures/templates-multiline/: input.js  output.js
tests/fixtures/ternary-expressions/: input.js  output.js
tests/fixtures/trivial/: input.js  output.js
tests/fixtures/typescript-enums/: input.ts  output.ts
tests/fixtures/typescript-inheritance/: input.ts  output.ts
tests/fixtures/typescript-namespaces/: input.ts  output.ts
tests/fixtures/unwanted/: input.js  output.js
tests/fixtures/unwanted-typescript/: input.ts
tests/instrumentation-test-plugin/: package.json  rollup.config.js  tsconfig.json
tests/instrumentation-test-plugin/src/: astro.ts  esbuild.ts  farm.ts  index.ts  nuxt.ts  rollup.ts  rspack.ts  vite.ts  webpack.ts
tests/instrumentation-test-plugin/src/core/: constants.ts  options.ts  string-imports.d.ts  unplugin.ts
tests/integration/esbuild/: README.md  build.js  package.json  vitest.config.js
tests/integration/esbuild/tests/: index.test.tsx
tests/integration/vite/: package.json  vite.config.ts
tests/integration/vite-with-yarn-pnp/: .gitignore  .yarnrc.yml  package.json  vite.config.ts
tests/integration/vite-with-yarn-pnp/tests/: index.test.tsx
tests/integration/vite/tests/: index.test.tsx
tests/integration/webpack/: README.md  package.json  vitest.config.js  webpack.config.js
tests/unit/: helpers.ts  index.test.ts  package.json  vite.config.js
tests/unit/__snapshots__/: index.test.ts.snap
(+5 files in other folders)
