[workspace]
members = [
  "datadog-js-instrumentation",
  "js-instrumentation-rewrite",
  "js-instrumentation-shared",
  "js-instrumentation-transform",
]
resolver = "2"

[workspace.package]
authors = ["Datadog"]
edition = "2021"
homepage = "https://github.com/Datadog"
license = "MIT"
repository = "https://github.com/Datadog"
rust-version = "1.70"

[workspace.dependencies]
anyhow = "1.0.83"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
lazy_static = "1.4.0"
ordermap = "0.5.6"
regex = { version = "1.10.4" }
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
similar-asserts = "1.4.2"
sourcemap = "9.0.0"
swc_atoms = "5.0.0"
swc_common = "12.0.1"
swc_core = { version = "27.0.6", features = ["__base"] }
swc_ecma_ast = "12.0.0"
swc_ecma_parser = "15.0.0"
swc_ecma_visit = "12.0.0"
testing = "13.0.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
