[package]
description = "Datadog JS instrumentation"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "datadog-js-instrumentation"
publish = false
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory", "-g"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "--enable-nontrapping-float-to-int",
  "--enable-bulk-memory",
  "-O4",
  "-g",
  "--flexible-inline-max-function-size",
  "4294967295",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }

js-instrumentation-shared = { path = "../js-instrumentation-shared/" }
js-instrumentation-transform = { path = "../js-instrumentation-transform/" }
