[package]
description = "Source code rewriting infrastructure for Datadog JS instrumentation"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "js-instrumentation-rewrite"
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"

[dependencies]
swc_common = { workspace = true }

js-instrumentation-shared = { path = "../js-instrumentation-shared/" }
