[package]
description = "Shared infrastructure for Datadog JS instrumentation"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "js-instrumentation-shared"
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.1.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
swc_ecma_parser = { workspace = true }
web-sys = { workspace = true }
